PIMS-207 fix spacing righthandmenu mac

--- a/frontend/src/components/maps/leaflet/InfoSlideOut/HeaderActions.scss
+++ b/frontend/src/components/maps/leaflet/InfoSlideOut/HeaderActions.scss
@@ -2,16 +2,28 @@
 
 .LinkMenu {
     background-color: colors.$filter-background-color;
-    height: 35px;
+    //height: 500px;
     width: 322px;
-    margin: 0px 0px 5px -10px;
+    margin: 0px 0px 0px -10px;
     font-size: 14px;
     padding: 10px;
+    display: inline-block;
+    white-space: nowrap;
+    a {
+        padding: 0px 2px;
+        color: colors.$slide-out-blue;
+        display: inline-block;
+        white-space: nowrap;
+    }
+    .VerticalBar {
+        border-left: 2px solid colors.$text-color;
+        height: 20px;
+        width: 0;
+        padding: 0;
+        display: inline-block;
+        white-space: nowrap;
+    }
 }
 
-.VerticalBar {
-    border-left: 2px solid rgba(96, 96, 96, 0.2);
-    height: 18px;
-    width: 0;
-    padding: 0;
-}
+
+
